--- a/openctf/templates/index.html
+++ b/openctf/templates/index.html
@@ -48,14 +48,10 @@
 				</div>
 			</div>
 		</nav>
-		<div class="row">
-			<div class="col-md-3">
-			</div>
-			<div class="col-md-9">
-				<div class="panel panel-default">
-					<div class="panel-body">
-					</div>
-				</div>
+		<div class="panel panel-default">
+			<div class="panel-body">
+				<h3>Dashboard</h3>
+				<hr />
 			</div>
 		</div>
 	</div>
