--- a/web/openctf/templates/layout.html
+++ b/web/openctf/templates/layout.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <nav role="navigation" class="navbar navbar-inverse" id="navbar" style="margin: 0; border-radius: 0;">
+    <nav role="navigation" class="navbar navbar-default" id="navbar" style="margin: 0; border-radius: 0;">
         {% include "navbar.html" %}
     </nav>
     <div style="min-height: 80vh;">
