More config stuff.

--- a/web/openctf/templates/admin/settings.html
+++ b/web/openctf/templates/admin/settings.html
@@ -57,6 +57,7 @@
                             <div class="panel-body">
                                 <fieldset class="container-fluid">
                                     <div class="row">
+                                        <p>Format is <code>%Y-%m-%d %H:%M:%S</code></p>
                                         <div class="col-sm-12 form-group">
                                             {{ render_field(settings_form.start_time) }}
                                             {{ render_field(settings_form.end_time) }}
