--- a/web/openctf/templates/navbar.html
+++ b/web/openctf/templates/navbar.html
@@ -30,7 +30,7 @@
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="{{ url_for('users.profile') }}"><i class="fa fa-fw fa-user"></i> My Profile</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="{{ url_for('users.settings') }}"><i class="fa fa-fw fa-sliders"></i> Settings</a></li>
+                            <li><a href="{{ url_for('users.settings') }}"><i class="fa fa-fw fa-sliders"></i> Account Settings</a></li>
                             <li><a href="{{ url_for('users.logout') }}"><i class="fa fa-fw fa-sign-out"></i> Logout</a></li>
                         </ul>
                     </li>
