Require mailgun domain and API key if option is ticked.

--- a/web/openctf/templates/admin/settings.html
+++ b/web/openctf/templates/admin/settings.html
@@ -43,6 +43,8 @@
                                         <div class="col-sm-12 form-group">
                                             {{ render_generic_field(settings_form.allow_registrations) }}
                                             {{ render_generic_field(settings_form.require_email_verification) }}
+                                            {{ render_field(settings_form.mailgun_domain) }}
+                                            {{ render_field(settings_form.mailgun_apikey) }}
                                         </div>
                                     </div>
                                 </fieldset>
