--- a/web/openctf/templates/layout.html
+++ b/web/openctf/templates/layout.html
@@ -14,11 +14,11 @@
     <meta name="og:site_name" content="{{ get_ctf_name() }}" />
     <meta name="og:description" content="{{ ctf_description }}" /> {% if keywords %}
     <meta name="keywords" content="{{ keywords }}" />{% endif %}
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/moment.min.js"></script>
-    <script src="/static/js/livestamp.min.js"></script>
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/moment.min.js"></script>
+    <script src="/assets/js/livestamp.min.js"></script>
 </head>
 
 <body>
