--- a/web/openctf/templates/navbar.html
+++ b/web/openctf/templates/navbar.html
@@ -35,8 +35,10 @@
                         </ul>
                     </li>
                 {% else %}
-                    <li><a href="{{ url_for('users.register') }}">Register</a></li>
-                    <li><a href="{{ url_for('users.login') }}">Login</a></li>
+                    {% if get_allowed_registrations() %}
+                        <li><a href="{{ url_for('users.register') }}">Register</a></li>
+                        <li><a href="{{ url_for('users.login') }}">Login</a></li>
+                    {% endif %}
                 {% endif %}
             </ul>
         {% endif %}
