--- a/web/openctf/templates/base/setup.j2
+++ b/web/openctf/templates/base/setup.j2
@@ -1,5 +1,5 @@
-{% from "templates.html" import render_field %}
-{% extends "layout.html" %}
+{% from "templates.j2" import render_field %}
+{% extends "layout.j2" %}
 {% block title %}Setup{% endblock %}
 
 {% block content %}
