--- a/web/openctf/templates/admin/settings.j2
+++ b/web/openctf/templates/admin/settings.j2
@@ -1,5 +1,5 @@
-{% from "templates.html" import render_field, render_generic_field %}
-{% extends "layout.html" %}
+{% from "templates.j2" import render_field, render_generic_field %}
+{% extends "layout.j2" %}
 {% block title %}CTF Settings{% endblock %}
 
 {% block content %}
