--- a/web/openctf/templates/users/profile.j2
+++ b/web/openctf/templates/users/profile.j2
@@ -44,13 +44,13 @@
                         <li role="presentation">
                             <a href="#activity" aria-controls="activity" role="tab" data-toggle="tab">Activity</a></li>
                         {% if user == current_user %}
-                            <a href="{{ url_for('users.settings') }}" class="btn btn-primary" style="float:right;">
+                            <a href="{{ url_for('users.settings') }}" class="btn btn-sm btn-primary" style="float:right;">
                                 <i class="fa fa-fw fa-pencil"></i> Edit Profile
                             </a>
                         {% endif %}
                     </ul>
                     <div class="tab-content">
-                        <div role="tabpanel" class="tab-pane active" id="profile">
+                        <div role="tabpanel" class="tab-pane active padded" id="profile">
                             <div class="row">
                                 <div class="col-xs-12">
                                     <div class="panel panel-default">
@@ -59,10 +59,12 @@
                                         </div>
                                         {% if not user.team %}
                                             <div class="panel-body">
-                                                <b>{{ user.name }}</b> is not a part of a team.
-                                                <a href="{{ url_for('teams.create') }}" class="btn btn-primary">
-                                                    <i class="fa fa-fw fa-pencil"></i> Create or Join Team
-                                                </a>
+                                                <p><b>{{ user.name }}</b> is not a part of a team.</p>
+                                                {% if me %}
+                                                    <a href="{{ url_for('teams.create') }}" class="btn btn-primary">
+                                                        <i class="fa fa-fw fa-pencil"></i> Create or Join Team
+                                                    </a>
+                                                {% endif %}
                                             </div>
                                         {% else %}
                                             <table class="table table-bordered">
