--- a/frontend/src/assets/openctf.sass
+++ b/frontend/src/assets/openctf.sass
@@ -1,9 +1,10 @@
 @charset "utf-8"
 
-@import "~bulma/sass/utilities/initial-variables"
+@import '~font-awesome/scss/_variables.scss';
+$fa-font-path: "~font-awesome/fonts";
+@import '~font-awesome/scss/font-awesome.scss';
 
-$turquoise: #E83386;
-$red: #c6032b;
+@import "~bulma/sass/utilities/initial-variables"
 
 @import "~bulma/sass/utilities/functions.sass"
 @import "~bulma/sass/utilities/derived-variables"
