--- a/src/components/Footer.html
+++ b/src/components/Footer.html
@@ -1,1 +1,7 @@
-footer
+<footer class="site-footer site-footer--sticky">
+    <div class="container">
+        <div class="row footer-copyright">
+            <p>Copyright &copy; 2018 EasyCTF Team. Powered by
+                <a href="https://github.com/easyctf/openctf" target="_blank">OpenCTF</a>.</p>
+        </div>
+</footer>
