--- a/src/components/Navbar.html
+++ b/src/components/Navbar.html
@@ -6,8 +6,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">OpenCTF</a>
+        <a class="navbar-brand" href="/">OpenCTF {user}</a>
     </div>
     <div id="navbar-content" class="collapse navbar-collapse">
     </div>
 </div>
+
+<script>
+</script>
