--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -1,5 +1,3 @@
-{{define "layout"}}
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,13 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>OpenCTF</title>
+    <title>Document</title>
 </head>
 
 <body>
-    {{ template "content" }}
-</body>
-
-</html>
-
-{{end}}
