--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,5 @@
+@import "simple-grid.scss";
 body {
-    background-color: #f0f0f0;
+    font-family: sans-serif;
+    background-color: #f8f8f8;
 }
